# leptos-file-upload

./: .gitignore  Cargo.toml  README.md
src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
src/page/: file_upload_page.rs  mod.rs
